--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "^5.7.5",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
+    "react-bootstrap-table": "^4.3.1",
     "react-date-picker": "^7.8.2",
     "react-datepicker": "^2.9.6",
     "react-day-picker": "^7.4.0",
